--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,12 @@
+---                               
+import './src/styles/global.css' 
+
+const {title = 'EPT - Eventos Lugares Viajes'} 
+= 
+	Astro.
+---
 <!doctype html>
-<html lang="en">
+<html lang="es">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
