--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,25 @@
 ---
-import Welcome from '../components/Welcome.astro';
-import Layout from '../layouts/Layout.astro';
+import Layout from '@/layouts/Layout.astro'
 
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import Hero from '../components/Hero.astro'
+import Trending from '../components/Trending.astro'
+import Visited from '../components/Visited.astro'
+import Categories from '../components/Categories.astro'
+import Social from '../components/Social.astro'
+import Plans from '../components/Plans.astro'
+import Info_turismo from '../components/Info_turismo.astro'
+import Footer from '../components/Footer.astro'
 ---
 
-<Layout>
-	<Welcome />
+
+
+<layout>
+	<Hero />
+	<Trending />
+	<Visited />
+	<Categories />
+	<Social />
+	<Plans />
+	<Info_turismo />
+	<Footer />
 </Layout>
