--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,29 +1,23 @@
----                               
-import './src/styles/global.css' 
-
-const {title = 'EPT - Eventos Lugares Viajes'} 
-= 
-	Astro.
 ---
+import "../styles/global.css"; // Asegúrate de que la ruta sea correcta
+import '@fontsource/poppins/100.css';
+import '@fontsource/poppins/400.css';
+import '@fontsource/poppins/600.css';
+import '@fontsource/poppins/800.css';
+import '@fontsource/poppins/900.css';
+const title = "EPT - Eventos Lugares Viajes"; // Definir el título correctamente
+---
+
 <!doctype html>
 <html lang="es">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="icon" type="image/svg+xml" href="../../public/images/Logo.webp" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>{title}</title>
 	</head>
 	<body>
 		<slot />
 	</body>
 </html>
-
-<style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
-</style>
