--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,19 +1,26 @@
 ---
-import Layout from '@/layouts/Layout.astro'
+import Layout from "@/layouts/Layout.astro";
 
-import Hero from '../components/Hero.astro'
-import Trending from '../components/Trending.astro'
-import Visited from '../components/Visited.astro'
-import Categories from '../components/Categories.astro'
-import Social from '../components/Social.astro'
-import Plans from '../components/Plans.astro'
-import Info_turismo from '../components/Info_turismo.astro'
-import Footer from '../components/Footer.astro'
+import Hero from "../sections/Hero.astro";
+import Trending from "../sections/Trending.astro";
+import Visited from "../sections/Visited.astro";
+import Categories from "../sections/Categories.astro";
+import Social from "../sections/Social.astro";
+import Plans from "../sections/Plans.astro";
+import Info_turismo from "../sections/Info_turismo.astro";
+import Footer from "../sections/Footer.astro";
+import { Image } from 'astro:assets';
+import imagenLogo from '../images/logo.png';
 ---
 
+<style>
+	body {
+		margin: 0;
+		padding: 0;
+	}
+</style>
 
-
-<layout>
+<Layout>
 	<Hero />
 	<Trending />
 	<Visited />
