--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -1,5 +1,98 @@
-.bff{
+nav {
+    background-color: var(--color-sky-blue);
+}
+
+.hero {
+    background-color: #f5f5f5;
     width: 100%;
-    height: 100px;
-    
+    height: 80vh;
+    margin: 0;
+}
+
+nav {
+    display: flex;
+    padding: 15px 60px;
+    background-color: transparent;
+    position: absolute;
+    z-index: 134;
+    width: 100%;
+}
+
+.nav-links {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 28px;
+    width: 100%;
+    padding: 0 20px;
+}
+
+.nav-links li {
+    display: flex;
+}
+
+.logo {
+    border-radius: 100%;
+    object-fit: cover;
+    width: 50px;
+    height: 50px;
+}
+
+.img-container {
+    position: relative;
+    background: #d63f3f;
+    width: 100%;
+    height: 50vh;
+}
+
+.img-container img {
+    width: 100%;
+    height: 50vh;
+    object-fit: cover;
+}
+
+.img-container h1 {
+    font-size: 50px;
+    position: absolute;
+    font-family: var(--font-poppins);
+    top: 55%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: var(--color-white);
+}
+
+.search {
+    width: auto;
+    position: relative;
+    display: flex;
+    justify-content: center;
+}
+
+.search-container {
+    display: flex;
+    justify-content: flex-start;
+    position: absolute;
+    gap: 10px;
+    top: -35px;
+    width: 60%;
+    margin: 10px;
+    padding: 13px 23px;
+    background-color: var(--color-white);
+    box-shadow: 0px 12px 27px -9px rgba(0,0,0,0.65);
+    border-radius: 20px;
+    outline: none;
+    font-size: 16px;
+}
+
+.search-container svg {
+    margin-top: 1px;
+    width: 20px;
+    height: 20px;
+}
+
+.search-container input {
+    border: none;
+    outline: none;
+    width: 100%;
+    font-size: 16px;
 }
