--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,1 +1,33 @@
 @import "tailwindcss";
+@import url("https://fonts.googleapis.com/css2?family=Alexandria:wght@100..900&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Lexend:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Sora:wght@100..800&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap");
+
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    background: var(--color-white);
+    font-family: 'Poppins', sans-serif;
+
+}
+
+:root {
+    --color-dark-blue: #021024;
+    --color-deep-navy: #052659;
+    --color-medium-blue: #5483b3;
+    --color-light-blue: #7da0ca;
+    --color-sky-blue: #c1e8ff;
+    --color-white: #F5F2E7; 
+    --color--black: #1C1C1C;
+
+    --font-alexandria: "Alexandria", sans-serif;
+    --font-dm-sans: "DM Sans", sans-serif;
+    --font-lexend: "Lexend", sans-serif;
+    --font-poppins: "Poppins", sans-serif;
+    --font-sora: "Sora", sans-serif;
+    --font-work-sans: "Work Sans", sans-serif;
+}
+
