--- a/src/sections/Hero.astro
+++ b/src/sections/Hero.astro
@@ -19,7 +19,8 @@ const props = Astro.props
         <!-- <div><img src="../../public/images/bgmain.webp" class="logo" alt="perfil foto" loading="lazy"></div>-->
     </nav>
     <div class="img-container">
-        <!--<img src="../../public/images/snazzy-image.webp" alt="">-->
+        <div class="gradient"></div>
+        <img src="../../public/images/bgmain.webp" alt="">
         <h1>Bienvenido, Jaime</h1>
     </div>
     <div class="search">
