--- a/src/sections/Trending.astro
+++ b/src/sections/Trending.astro
@@ -1,3 +1,95 @@
-<section class="Trending">
+---
+import "../styles/Trending.css";
+const props = Astro.props;
+---
 
+<section class="Trending">
+    <h2>Tendencias</h2>
+    <div class="container-activities">
+        <div class="card">
+            <a href="#">
+                <div class="blur"></div>
+                <img src="../../public/images/card1.webp" alt="Getsemani" />
+                <a href="#" class="title">Calles Getsemani</a>
+                <div class="container-bookmark">
+                    <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="30"
+                        height="30"
+                        viewBox="0 0 24 24"
+                        {...props}
+                        class="bookmark"
+                    >
+                        <path
+                            fill="currentColor"
+                            d="M16 2H8C6.3 2 5 3.3 5 5v16c0 .2 0 .3.1.5c.3.5.9.6 1.4.4l5.5-3.2l5.5 3.2c.2.1.3.1.5.1c.6 0 1-.4 1-1V5c0-1.7-1.3-3-3-3"
+                        ></path>
+                    </svg>
+                </div>
+            </a>
+        </div>
+        <div class="card">
+            <a href="#">
+                <div class="blur"></div>
+                <img src="../../public/images/card3.webp" alt="card3" />
+                <a href="/ciudad-amurallada" class="title">Chiva</a>
+                <div class="container-bookmark">
+                    <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="30"
+                        height="30"
+                        viewBox="0 0 24 24"
+                        class="bookmark"
+                    >
+                        <path
+                            fill="currentColor"
+                            d="M16 2H8C6.3 2 5 3.3 5 5v16c0 .2 0 .3.1.5c.3.5.9.6 1.4.4l5.5-3.2l5.5 3.2c.2.1.3.1.5.1c.6 0 1-.4 1-1V5c0-1.7-1.3-3-3-3"
+                        ></path>
+                    </svg>
+                </div>
+            </a>
+        </div>
+        <div class="card">
+            <a href="#">
+                <div class="blur"></div>
+                <img src="../../public/images/card4.webp" alt="card4" />
+                <a href="/ciudad-amurallada" class="title">Isla Cholon</a>
+                <div class="container-bookmark">
+                    <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="30"
+                        height="30"
+                        viewBox="0 0 24 24"
+                        class="bookmark"
+                    >
+                        <path
+                            fill="currentColor"
+                            d="M16 2H8C6.3 2 5 3.3 5 5v16c0 .2 0 .3.1.5c.3.5.9.6 1.4.4l5.5-3.2l5.5 3.2c.2.1.3.1.5.1c.6 0 1-.4 1-1V5c0-1.7-1.3-3-3-3"
+                        ></path>
+                    </svg>
+                </div>
+            </a>
+        </div>
+        <div class="card">
+            <a href="#">
+                <div class="blur"></div>
+                <img src="../../public/images/card2.webp" alt="card2" />
+                <a href="/ciudad-amurallada" class="title">Ciudad Amurallada</a>
+                <div class="container-bookmark">
+                    <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="30"
+                        height="30"
+                        viewBox="0 0 24 24"
+                        class="bookmark"
+                    >
+                        <path
+                            fill="currentColor"
+                            d="M16 2H8C6.3 2 5 3.3 5 5v16c0 .2 0 .3.1.5c.3.5.9.6 1.4.4l5.5-3.2l5.5 3.2c.2.1.3.1.5.1c.6 0 1-.4 1-1V5c0-1.7-1.3-3-3-3"
+                        ></path>
+                    </svg>
+                </div>
+            </a>
+        </div>
+    </div>
 </section>
