--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -5,7 +5,8 @@ nav {
 .hero {
     background-color: #f5f5f5;
     width: 100%;
-    height: 80vh;
+    /*Altura seccion*/
+    height: 55vh;
     margin: 0;
 }
 
@@ -24,6 +25,8 @@ nav {
     align-items: center;
     gap: 28px;
     width: 100%;
+    color: var(--color-white);
+    font-weight: 400;
     padding: 0 20px;
 }
 
@@ -31,7 +34,12 @@ nav {
     display: flex;
 }
 
+.nav-links li a {
+    z-index: 2;
+}
+
 .logo {
+    z-index: 2;
     border-radius: 100%;
     object-fit: cover;
     width: 50px;
@@ -45,23 +53,38 @@ nav {
     height: 50vh;
 }
 
+.img-container .gradient {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1;
+    height: 50vh;
+    background: rgb(45,40,40);
+background: linear-gradient(180deg, rgba(45, 40, 40, 0.705) 1%, rgba(84,84,157,0.3113620448179272) 12%);
+}
+
 .img-container img {
     width: 100%;
     height: 50vh;
     object-fit: cover;
+    z-index: 0;
 }
 
 .img-container h1 {
     font-size: 50px;
+    font-weight: 700 ;
     position: absolute;
     font-family: var(--font-poppins);
     top: 55%;
     left: 50%;
     transform: translate(-50%, -50%);
     color: var(--color-white);
+    z-index: 2;
 }
 
 .search {
+    z-index: 2;
     width: auto;
     position: relative;
     display: flex;
