Secciones Casi Completadas

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import Layout from "@/layouts/Layout.astro";
 
 import Hero from "../sections/Hero.astro";
+import Events from "../sections/Events.astro"
 import Trending from "../sections/Trending.astro";
 import Visited from "../sections/Visited.astro";
 import Categories from "../sections/Categories.astro";
@@ -22,9 +23,10 @@ import imagenLogo from '../images/logo.png';
 
 <Layout>
 	<Hero />
+	<Events />
 	<Trending />
-	<Visited />
 	<Categories />
+	<Visited />
 	<Social />
 	<Plans />
 	<Info_turismo />
