--- a/src/sections/Hero.astro
+++ b/src/sections/Hero.astro
@@ -14,7 +14,7 @@ const props = Astro.props
             </svg></li>
             <li><a href="#">Guardado</a></li>
             <li><a href="#">Asistente</a></li>
-            <li><a href="#">Log In</a></li>
+            <li><a href="#" class="log-in">Log In</a></li>
         </ul>
         <!-- <div><img src="../../public/images/bgmain.webp" class="logo" alt="perfil foto" loading="lazy"></div>-->
     </nav>
@@ -22,6 +22,7 @@ const props = Astro.props
         <div class="gradient"></div>
         <img src="../../public/images/bgmain.webp" alt="">
         <h1>Bienvenido, Jaime</h1>
+        <a>Cerca de ti</a>
     </div>
     <div class="search">
         <div class="search-container">
