--- a/src/sections/Trending.astro
+++ b/src/sections/Trending.astro
@@ -4,7 +4,7 @@ const props = Astro.props;
 ---
 
 <section class="Trending">
-    <h2>Tendencias</h2>
+    <h2>Tendencias, <a href="#" class="city">Cartagena de Indias</a></h2>
     <div class="container-activities">
         <div class="card">
             <a href="#">
@@ -25,6 +25,32 @@ const props = Astro.props;
                             d="M16 2H8C6.3 2 5 3.3 5 5v16c0 .2 0 .3.1.5c.3.5.9.6 1.4.4l5.5-3.2l5.5 3.2c.2.1.3.1.5.1c.6 0 1-.4 1-1V5c0-1.7-1.3-3-3-3"
                         ></path>
                     </svg>
+                </div>
+                <div class="container-info cursor-pointer">
+                    <p class="title-info">Calles Getsemani</p>
+                    <p class="city-info">
+                        Cartagena de Indias, Bolivar, Colombia
+                    </p>
+                    <div class="contain flex">
+                        <div class="container-stars flex">
+                            <svg
+                                xmlns="http://www.w3.org/2000/svg"
+                                width="20"
+                                height="20"
+                                viewBox="0 0 24 24"
+                                fill="currentColor"
+                            >
+                                <path
+                                    fill="currentColor"
+                                    d="M12 2l2.5 6.1l6.5.5l-5 4.3l1.5 6.5L12 16.4l-5 4.3l1.5-6.5l-5-4.3l6.5-.5L12 2z"
+                                ></path>
+                            </svg>
+                            <p>4.5</p>
+                        </div>
+                        <div class="container-price">
+                            <p>. Facil . 2,9 km . Est. 1hr</p>
+                        </div>
+                    </div>
                 </div>
             </a>
         </div>
@@ -47,6 +73,32 @@ const props = Astro.props;
                         ></path>
                     </svg>
                 </div>
+                <div class="container-info cursor-pointer">
+                    <p class="title-info">Chiva Rumbera</p>
+                    <p class="city-info">
+                        Cartagena de Indias, Bolivar, Colombia
+                    </p>
+                    <div class="contain flex">
+                        <div class="container-stars flex">
+                            <svg
+                                xmlns="http://www.w3.org/2000/svg"
+                                width="20"
+                                height="20"
+                                viewBox="0 0 24 24"
+                                fill="currentColor"
+                            >
+                                <path
+                                    fill="currentColor"
+                                    d="M12 2l2.5 6.1l6.5.5l-5 4.3l1.5 6.5L12 16.4l-5 4.3l1.5-6.5l-5-4.3l6.5-.5L12 2z"
+                                ></path>
+                            </svg>
+                            <p>4.0</p>
+                        </div>
+                        <div class="container-price">
+                            <p>. Facil . 0,0 km . Est. 1hr</p>
+                        </div>
+                    </div>
+                </div>
             </a>
         </div>
         <div class="card">
@@ -68,6 +120,32 @@ const props = Astro.props;
                         ></path>
                     </svg>
                 </div>
+                <div class="container-info cursor-pointer">
+                    <p class="title-info">Isla Cholon</p>
+                    <p class="city-info">
+                        Cartagena de Indias, Bolivar, Colombia
+                    </p>
+                    <div class="contain flex">
+                        <div class="container-stars flex">
+                            <svg
+                                xmlns="http://www.w3.org/2000/svg"
+                                width="20"
+                                height="20"
+                                viewBox="0 0 24 24"
+                                fill="currentColor"
+                            >
+                                <path
+                                    fill="currentColor"
+                                    d="M12 2l2.5 6.1l6.5.5l-5 4.3l1.5 6.5L12 16.4l-5 4.3l1.5-6.5l-5-4.3l6.5-.5L12 2z"
+                                ></path>
+                            </svg>
+                            <p>4.5</p>
+                        </div>
+                        <div class="container-price">
+                            <p>. Facil . 3,9 km . Est. 45m</p>
+                        </div>
+                    </div>
+                </div>
             </a>
         </div>
         <div class="card">
@@ -88,6 +166,80 @@ const props = Astro.props;
                             d="M16 2H8C6.3 2 5 3.3 5 5v16c0 .2 0 .3.1.5c.3.5.9.6 1.4.4l5.5-3.2l5.5 3.2c.2.1.3.1.5.1c.6 0 1-.4 1-1V5c0-1.7-1.3-3-3-3"
                         ></path>
                     </svg>
+                </div>
+                <div class="container-info cursor-pointer">
+                    <p class="title-info">Centro Historico</p>
+                    <p class="city-info">
+                        Cartagena de Indias, Bolivar, Colombia
+                    </p>
+                    <div class="contain flex">
+                        <div class="container-stars flex">
+                            <svg
+                                xmlns="http://www.w3.org/2000/svg"
+                                width="20"
+                                height="20"
+                                viewBox="0 0 24 24"
+                                fill="currentColor"
+                            >
+                                <path
+                                    fill="currentColor"
+                                    d="M12 2l2.5 6.1l6.5.5l-5 4.3l1.5 6.5L12 16.4l-5 4.3l1.5-6.5l-5-4.3l6.5-.5L12 2z"
+                                ></path>
+                            </svg>
+                            <p>4.5</p>
+                        </div>
+                        <div class="container-price">
+                            <p>. Facil . 2,9 km . Est. 1hr</p>
+                        </div>
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="card">
+            <a href="#">
+                <div class="blur"></div>
+                <img src="../../public/images/card1.webp" alt="Getsemani" />
+                <a href="#" class="title">Calles Getsemani</a>
+                <div class="container-bookmark">
+                    <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="30"
+                        height="30"
+                        viewBox="0 0 24 24"
+                        {...props}
+                        class="bookmark"
+                    >
+                        <path
+                            fill="currentColor"
+                            d="M16 2H8C6.3 2 5 3.3 5 5v16c0 .2 0 .3.1.5c.3.5.9.6 1.4.4l5.5-3.2l5.5 3.2c.2.1.3.1.5.1c.6 0 1-.4 1-1V5c0-1.7-1.3-3-3-3"
+                        ></path>
+                    </svg>
+                </div>
+                <div class="container-info cursor-pointer">
+                    <p class="title-info">Calles Getsemani</p>
+                    <p class="city-info">
+                        Cartagena de Indias, Bolivar, Colombia
+                    </p>
+                    <div class="contain flex">
+                        <div class="container-stars flex">
+                            <svg
+                                xmlns="http://www.w3.org/2000/svg"
+                                width="20"
+                                height="20"
+                                viewBox="0 0 24 24"
+                                fill="currentColor"
+                            >
+                                <path
+                                    fill="currentColor"
+                                    d="M12 2l2.5 6.1l6.5.5l-5 4.3l1.5 6.5L12 16.4l-5 4.3l1.5-6.5l-5-4.3l6.5-.5L12 2z"
+                                ></path>
+                            </svg>
+                            <p>4.5</p>
+                        </div>
+                        <div class="container-price">
+                            <p>. Facil . 2,9 km . Est. 1hr</p>
+                        </div>
+                    </div>
                 </div>
             </a>
         </div>
