--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -12,7 +12,7 @@ nav {
 
 nav {
     display: flex;
-    padding: 15px 60px;
+    padding: 15px 40px 15px 60px ;
     background-color: transparent;
     position: absolute;
     z-index: 134;
@@ -36,6 +36,12 @@ nav {
 
 .nav-links li a {
     z-index: 2;
+}
+
+.log-in{
+    border-radius: 40px;
+    border: 1px solid var(--color-white);
+    padding: 6px 15px;
 }
 
 .logo {
@@ -77,6 +83,20 @@ background: linear-gradient(180deg, rgba(45, 40, 40, 0.705) 1%, rgba(84,84,157,0
     position: absolute;
     font-family: var(--font-poppins);
     top: 55%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: var(--color-white);
+    z-index: 2;
+}
+
+
+.img-container a{
+    font-size: 20px;
+    font-weight: 600 ;
+    text-decoration: underline;
+    position: absolute;
+    font-family: var(--font-poppins);
+    top: 70%;
     left: 50%;
     transform: translate(-50%, -50%);
     color: var(--color-white);
