--- a/src/styles/Trending.css
+++ b/src/styles/Trending.css
@@ -1,10 +1,8 @@
 
 .Trending {
-    box-sizing: border-box;
     width: 100%;
-    height: 60vh;
-    padding: 2rem 3rem;
-    padding-bottom: 1000px;
+    height: auto;
+    padding: 2rem 3rem 1rem 3rem;
 }
 
 h2 {
@@ -18,14 +16,17 @@ h2 {
 
 .container-activities {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: 460px;
+    height: 440px;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: 360px;
     grid-gap: 1rem;
+    overflow-x: hidden;
 }
 
 .card {
     position: relative;
     width: 100%;
+    min-width: 300px;
     height: 100%;
     border-radius: 8px;
 }
@@ -88,4 +89,31 @@ h2 {
 .card:hover a ,
 .card:hover .blur{
     opacity: 1;
+}
+
+.city {
+    text-decoration: underline;
+}
+
+
+.container-info{
+    padding: 10px 0px;
+    line-height: 23px;
+}
+
+.title-info{
+    font-size: 1.1rem;
+    font-family: var(--font-poppins);
+    color: var(--color-black);
+    font-weight: 700;
+}
+
+.city-info{
+    font-size: 0.9rem;
+    font-family: var(--font-poppins);
+    font-weight: 500;
+}
+
+.contain{
+    color: #575757;
 }
