--- a/src/sections/Hero.astro
+++ b/src/sections/Hero.astro
@@ -14,8 +14,10 @@ const props = Astro.props
             </svg></li>
             <li><a href="#">Guardado</a></li>
             <li><a href="#">Asistente</a></li>
-            <li><a href="#" class="log-in">Log In</a></li>
         </ul>
+        <div class="log-contain h-full flex justify-center items-center">
+            <li class="list-none"><a href="#" class="log-in">Log In</a></li>
+        </div>
         <!-- <div><img src="../../public/images/bgmain.webp" class="logo" alt="perfil foto" loading="lazy"></div>-->
     </nav>
     <div class="img-container">
