--- a/src/sections/Trending.astro
+++ b/src/sections/Trending.astro
@@ -4,7 +4,7 @@ const props = Astro.props;
 ---
 
 <section class="Trending">
-    <h2>Tendencias, <a href="#" class="city">Cartagena de Indias</a></h2>
+    <h2 class="h2_trendi">Tendencias, <a href="#" class="city">Cartagena de Indias</a></h2>
     <div class="container-activities">
         <div class="card">
             <a href="#">
