--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -6,7 +6,7 @@ nav {
     background-color: #f5f5f5;
     width: 100%;
     /*Altura seccion*/
-    height: 55vh;
+    height: 52vh;
     margin: 0;
 }
 
@@ -21,7 +21,7 @@ nav {
 
 .nav-links {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
     gap: 28px;
     width: 100%;
@@ -32,16 +32,24 @@ nav {
 
 .nav-links li {
     display: flex;
+    
 }
 
 .nav-links li a {
     z-index: 2;
+    font-weight: 800;
+}
+
+.log-contain{
+    width: 100px;
 }
 
 .log-in{
     border-radius: 40px;
     border: 1px solid var(--color-white);
-    padding: 6px 15px;
+    padding: 6px 15px;    
+    font-weight: 800;
+    color: var(--color-white);
 }
 
 .logo {
