--- a/src/styles/Trending.css
+++ b/src/styles/Trending.css
@@ -14,6 +14,11 @@ h2 {
     margin-bottom: 1rem;
 }
 
+.h2_trendi{
+    margin-top: 0;
+    margin-top: 0;
+}
+
 .container-activities {
     display: grid;
     height: 440px;
