Creando pagina de buscador toures con mapa y sticky

--- a/src/sections/Categories.astro
+++ b/src/sections/Categories.astro
@@ -5,11 +5,11 @@ const props = Astro.props;
 
 <section class="Categories flex w-full h-fit flex-col">
     <h2 class="h2_categories">Categories</h2>
-    <div class="flex">
+    <div class="flex gap-20 justify-center items-center">
         <div class="container-categories flex justify-start gap-8">
             <a href="">
                 <div
-                    class="links flex flex-col justify-center items-center gap-2 text-center"
+                    class="circle-cat links flex flex-col justify-center items-center gap-2 text-center"
                 >
                     <img
                         class="w-[70px] h-[70px] rounded-full object-cover"
@@ -21,7 +21,7 @@ const props = Astro.props;
             </a>
             <a href="">
                 <div
-                    class="links flex flex-col justify-center items-center gap-2 text-center"
+                    class="circle-cat links flex flex-col justify-center items-center gap-2 text-center"
                 >
                     <img
                         class="w-[70px] h-[70px] rounded-full object-cover"
@@ -33,7 +33,7 @@ const props = Astro.props;
             </a>
             <a href="">
                 <div
-                    class="links flex flex-col justify-center items-center gap-2 text-center"
+                    class="circle-cat links flex flex-col justify-center items-center gap-2 text-center"
                 >
                     <img
                         class="w-[70px] h-[70px] rounded-full object-cover"
@@ -44,9 +44,7 @@ const props = Astro.props;
                 </div>
             </a>
             <a href="">
-                <div
-                    class="links flex flex-col justify-center items-center gap-2 text-center"
-                >
+                <div class="circle-cat links flex flex-col justify-center items-center gap-2 text-center">
                     <img
                         class="w-[70px] h-[70px] rounded-full object-cover"
                         src="../../public/images/categorias/islas.webp"
@@ -57,7 +55,7 @@ const props = Astro.props;
             </a>
             <a href="">
                 <div
-                    class="links flex flex-col justify-center items-center gap-2 text-center"
+                    class="circle-cat links flex flex-col justify-center items-center gap-2 text-center"
                 >
                     <img
                         class="w-[70px] h-[70px] rounded-full object-cover"
@@ -69,7 +67,7 @@ const props = Astro.props;
             </a>
             <a href="">
                 <div
-                    class="links flex flex-col justify-center items-center gap-2 text-center"
+                    class="circle-cat links flex flex-col justify-center items-center gap-2 text-center"
                 >
                     <img
                         class="w-[70px] h-[70px] rounded-full object-cover"
@@ -81,7 +79,7 @@ const props = Astro.props;
             </a>
             <a href="">
                 <div
-                    class="links flex flex-col justify-center items-center gap-2 text-center"
+                    class="circle-cat links flex flex-col justify-center items-center gap-2 text-center"
                 >
                     <img
                         class="w-[70px] h-[70px] rounded-full object-cover"
@@ -93,7 +91,7 @@ const props = Astro.props;
             </a>
             <a href="">
                 <div
-                    class="links flex flex-col justify-center items-center gap-2 text-center"
+                    class="circle-cat links flex flex-col justify-center items-center gap-2 text-center"
                 >
                     <img
                         class="w-[70px] h-[70px] rounded-full object-cover"
@@ -105,7 +103,7 @@ const props = Astro.props;
             </a>
             <a href="">
                 <div
-                    class="links flex flex-col justify-center items-center gap-2 text-center"
+                    class="circle-cat links flex flex-col justify-center items-center gap-2 text-center"
                 >
                     <img
                         class="w-[70px] h-[70px] rounded-full object-cover"
