--- a/src/sections/Visited.astro
+++ b/src/sections/Visited.astro
@@ -10,10 +10,16 @@ const props = Astro.props;
 .img-visited {
     background-position: center;
 }
-.Visited{
-    width: 100%;
-    height: auto;
+
+.Visited {
+    position: relative; 
+    width: 100%; 
+    max-width: 1351px; 
+    margin: 0 auto;
+    height: fit-content;
     padding: 2rem 3rem 1rem 3rem;
+    margin-top: 4rem; 
+    margin-bottom: 2rem;
 }
 </style>
 <section class="Visited">
