--- a/src/styles/Trending.css
+++ b/src/styles/Trending.css
@@ -1,7 +1,10 @@
 
 .Trending {
-    width: 100%;
-    height: auto;
+    position: relative;
+    width: 100%; 
+    max-width: 1351px; 
+    margin: 0 auto;
+    height: fit-content;
     padding: 2rem 3rem 1rem 3rem;
 }
 
@@ -20,19 +23,21 @@ h2 {
 }
 
 .container-activities {
-    display: grid;
-    height: 440px;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: 360px;
-    grid-gap: 1rem;
-    overflow-x: hidden;
+    display: flex;
+    width: 100%;
+    height: fit-content;
+    position: relative;
+    gap: 1rem;
+    box-sizing: border-box;
 }
 
+
 .card {
-    position: relative;
+    position: sticky;
+    left: 0px;
     width: 100%;
     min-width: 300px;
-    height: 100%;
+    height: 360px;
     border-radius: 8px;
 }
 
